--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
 # --- Basic options --- #
 
 # Name of website
-title: My website
+title: Tyler Robichaux
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: Tyler Robichaux's portfolio website
 
 # Your name to show in the footer
-author: Some Person
+author: Tyler Robichaux
 
 # --- List of links in the navigation bar --- #
 
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
+    - Github: "https://github.com/TylerRobichaux"
     - Learn markdown: "https://www.markdowntutorial.com/"
   Author's home: "https://deanattali.com"
 
@@ -38,9 +38,9 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "someone@example.com"
+  email: "TRobichaux91@gmail.com"
   facebook: deanattali
-  github: daattali
+  github: https://github.com/TylerRobichaux
   twitter: daattali
   rss: true
 #  reddit: yourname
