--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ excerpt_length: 50
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
 navbar-col: "##0a0c40"
-navbar-text-col: "#404040"
+navbar-text-col: "##ffffff"
 navbar-border-col: "#EAEAEA"
 page-col: "##0a0c40"
 link-col: "#008AFF"
