--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,9 @@ excerpt_length: 50
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
 navbar-col: "##0a0c40"
-navbar-text-col: "##ffffff"
+navbar-text-col: "#ffffff"
 navbar-border-col: "#EAEAEA"
-page-col: "##0a0c40"
+page-col: "#0a0c40"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#F5F5F5"
