--- a/_config.yml
+++ b/_config.yml
@@ -80,15 +80,15 @@ excerpt_length: 50
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "##0a0c40"
+navbar-col: "#07013b"
 navbar-text-col: "#ffffff"
-navbar-border-col: "#EAEAEA"
-page-col: "#0a0c40"
-link-col: "#008AFF"
+navbar-border-col: "#ffffff"
+page-col: "#07013b"
+link-col: "#ffffff"
 hover-col: "#0085A1"
-footer-col: "#F5F5F5"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
+footer-col: "#07013b"
+footer-text-col: "#ffffff"
+footer-link-col: "#ffffff"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
