--- a/_config.yml
+++ b/_config.yml
@@ -80,15 +80,15 @@ excerpt_length: 50
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#07013b"
-navbar-text-col: "#ffffff"
-navbar-border-col: "#ffffff"
-page-col: "#07013b"
-link-col: "#ffffff"
+navbar-col: "#ffffff"
+navbar-text-col: "#000000"
+navbar-border-col: "#000000"
+page-col: "#ffffff"
+link-col: "#000000"
 hover-col: "#0085A1"
-footer-col: "#07013b"
-footer-text-col: "#ffffff"
-footer-link-col: "#ffffff"
+footer-col: "#ffffff"
+footer-text-col: "#000000"
+footer-link-col: "#000000"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
